tests/testcases/valid/06_arithmetic_and_assignment.ciel
int main() {
    int a = 10;
    int b = 3;
    int addv = a + b;
    int subv = a - b;
    int mulv = a * b;
    int divv = a / b;
    int modv = a % b;
    int c = 5;
    c += 2;
    c *= 3;
    c -= 1;
    c /= 2;
    c %= 3;
    return 0;
}
