tests/testcases/invalid/semantic/76_assign_to_binary_expression.ciel
// Error: cannot assign to binary expression result (rvalue)
int main() {
    int a = 5;
    int b = 10;

    // Error: (a + b) is an rvalue
    (a + b) = 20;

    return 0;
}
